trouble shoot model and views

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
 <div class="blog-post">
   <div class="post">
     <div class="img">
-      <img src="{{blog.img}}" alt="Decorative Image">
+      <img src={{blog.img}} alt="Decorative Image">
     </div>
     <h2 class="title">{{blog.title}}</h2>
     <h3 class="subtitle">{{blog.subtitle}}</h3>
