--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,11 +25,11 @@
 {{!-- conditional to login or out --}}
 {{#if logged_in}}
         <li class="nav-item">
-          <a class="nav-link" href="#">Logout</a>
+          <a class="nav-link logout" href="#">Logout</a>
         </li>
 {{else}}
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link login" href="login">Login</a>
         </li>
 {{/if}}
 
@@ -45,5 +45,6 @@
 {{{body}}}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="./public/js/login.js"></script>
   </body>
 </html>
