--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,15 +17,15 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Dashboard</a>
+          <a class="nav-link" href="/">Dashboard</a>
         </li>
 {{!-- conditional to login or out --}}
 {{#if logged_in}}
         <li class="nav-item">
-          <a class="nav-link logout" href="#">Logout</a>
+          <a id="logout" class="nav-link logout" href="login">Logout</a>
         </li>
 {{else}}
         <li class="nav-item">
@@ -46,5 +46,6 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="./public/js/login.js"></script>
+    <script src="./public/js/logout.js"></script>
   </body>
 </html>
