--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,10 @@
 {{{body}}}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="./public/js/login.js"></script>
-    <script src="./public/js/logout.js"></script>
+    <script src="js/login.js"></script>
+    {{#if logged_in}}
+    <script src="js/logout.js"></script>
+    <script src="js/blogfocus.js"></script>
+    {{/if}}
   </body>
 </html>
