debugging comment post

--- a/views/blogfocus.handlebars
+++ b/views/blogfocus.handlebars
@@ -17,7 +17,7 @@
         <p>{{format_date comment.date}}</p>
     </div>
     {{/each}}
-    {{#if logged_in}}
+    {{#if loggedIn}}
   </div>
   {{> addcomment}}
 </div>
