--- a/views/partials/addcomment.handlebars
+++ b/views/partials/addcomment.handlebars
@@ -1,5 +1,5 @@
 <div class="comment-form">
-    <form>
+    <form id="comment-form">
         <div>
             <textarea name="newComment" id="newComment" cols="60" rows="5">
         </textarea>
