--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,6 @@
           <a class="nav-link signup" href="/signup">Sign Up</a>
         </li>
 {{/if}}
-
       </ul>
     </div>
   </div>
@@ -48,11 +47,10 @@
 {{{body}}}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="js/login.js"></script>
-    {{#if logged_in}}
+    <script src="js/blogfocus.js"></script>
+    {{#if loggedIn}}
     <script src="js/logout.js"></script>
     {{else}}
-    <script src="js/blogfocus.js"></script>
     <script src="js/signup.js"></script>
     <script src="js/login.js"></script>
     {{/if}}
