--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
 {{!-- conditional to login or out --}}
 {{#if loggedIn}}
         <li class="nav-item">
-          <a id="logout" class="nav-link logout" href="/login">Logout</a>
+          <a id="logout" class="nav-link logout" href="/logout">Logout</a>
         </li>
 {{else}}
         <li class="nav-item">
@@ -47,12 +47,12 @@
 {{{body}}}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="js/blogfocus.js"></script>
+    <script src="/js/blogfocus.js"></script>
     {{#if loggedIn}}
-    <script src="js/logout.js"></script>
+    <script src="/js/logout.js"></script>
     {{else}}
-    <script src="js/signup.js"></script>
-    <script src="js/login.js"></script>
+    <script src="/js/signup.js"></script>
+    <script src="/js/login.js"></script>
     {{/if}}
   </body>
 </html>
