--- a/views/partials/addcomment.handlebars
+++ b/views/partials/addcomment.handlebars
@@ -1,8 +1,7 @@
 <div class="comment-form">
     <form id="comment-form">
         <div>
-            <textarea name="newComment" id="newComment" cols="60" rows="5">
-        </textarea>
+            <textarea name="newComment" id="newComment" cols="60" rows="5"></textarea>
         </div>
         <div class="submit-button">
             <button class="btn btn-primary">Submit</button>
