--- a/views/blogfocus.handlebars
+++ b/views/blogfocus.handlebars
@@ -12,9 +12,9 @@
   <div id="comment-container" class="container">
     {{#each blog.comments as |comment|}}
     <div class="comment">
-      <p>{{comment.user.username}}</p>
-        <p>{{comment.content}}</p>
-        <p>{{format_date comment.date}}</p>
+      <p>user: {{comment.user.username}}</p>
+        <p>said: {{comment.content}}</p>
+        <p>posted: {{format_date comment.date}}</p>
     </div>
     {{/each}}
     {{#if loggedIn}}
