add put route for blog post

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -13,6 +13,7 @@
     <h2 class="title">{{blog.title}}</h2>
     <h3 class="subtitle"><a href="/blog/{{blog.id}}">{{blog.subtitle}}</a></h3>
     <p class="date-created">{{format_date blog.date}}</p>
+    <p><a href="/edit-post/{{blog.id}}">Edit Post 📝</a></p>
   </div>
 </div>
 {{/each}}
