--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,6 +51,7 @@
     {{#if loggedIn}}
     <script src="/js/logout.js"></script>
     <script src="/js/dashboard.js"></script>
+    <script src="/js/editpost.js"></script>
     {{else}}
     <script src="/js/signup.js"></script>
     <script src="/js/login.js"></script>
