debugging delete route

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,6 +14,8 @@
     <h3 class="subtitle"><a href="/blog/{{blog.id}}">{{blog.subtitle}}</a></h3>
     <p class="date-created">{{format_date blog.date}}</p>
     <p><a href="/edit-post/{{blog.id}}">Edit Post 📝</a></p>
+    <button data-blogid="{{blog.id}}" class="delete-post btn btn-danger">Delete Post</button>
+    
   </div>
 </div>
 {{/each}}
