--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
     <h2 class="title">{{blog.title}}</h2>
     <h3 class="subtitle"><a href="/blog/{{blog.id}}">{{blog.subtitle}}</a></h3>
     <p class="date-created">{{format_date blog.date}}</p>
-    <p class="content">{{blog.content}}</p>
+    <p class="content short-content">{{blog.content}}</p>
   </div>
 </div>
 {{/each}}
