change href for logout link

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
 {{!-- conditional to login or out --}}
 {{#if loggedIn}}
         <li class="nav-item">
-          <a id="logout" class="nav-link logout" href="/logout">Logout</a>
+          <a id="logout" class="nav-link logout" href="#">Logout</a>
         </li>
 {{else}}
         <li class="nav-item">
