--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,3 +1,4 @@
+{{!-- This page will render the title, subtitle, img, and content to the values of each form input, so that the user can edit them. --}}
 <div class="container text-center">
   <h1>Edit Post</h1>
 </div>
@@ -40,11 +41,7 @@
       <label>Post</label>
     </div>
 
-    <button
-      id="post-submit"
-      type="submit"
-      class="btn btn-primary"
-    >Update Post</button>
+    <button id="post-submit" type="submit" class="btn btn-primary">Update Post</button>
 
   </form>
 </div>
