--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,16 @@
 {{#each blogs as |blog|}}
-<div class="blog-post container">
-  <div class="post">
-    <div class="img img-fluid">
-      <img src={{blog.img}} alt="Decorative Image">
+  <div class="blog-post container">
+    <div class="post">
+      <div class="img img-fluid">
+        <img src={{blog.img}} alt="Decorative Image" />
+      </div>
+      <h2 class="title">{{blog.title}}</h2>
+      <h3 class="subtitle"><a
+          href="/blog/{{blog.id}}"
+        >{{blog.subtitle}}</a></h3>
+      <p class="date-created">{{format_date blog.date}}</p>
+      <p class="content short-content">{{blog.content}}</p>
     </div>
-    <h2 class="title">{{blog.title}}</h2>
-    <h3 class="subtitle"><a href="/blog/{{blog.id}}">{{blog.subtitle}}</a></h3>
-    <p class="date-created">{{format_date blog.date}}</p>
-    <p class="content short-content">{{blog.content}}</p>
   </div>
-</div>
 {{/each}}
+{{!-- each blog post in the database will be displayed here in order of newest to oldest. --}}
