--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,60 +1,82 @@
-<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Musical Code</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+
+    {{!-- bootstrap --}}
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    {{!-- custom styles --}}
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    {{!-- navbar --}}
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/dashboard">Dashboard</a>
-        </li>
-{{!-- conditional to login or out --}}
-{{#if loggedIn}}
-        <li class="nav-item">
-          <a id="logout" class="nav-link logout" href="#">Logout</a>
-        </li>
-{{else}}
-        <li class="nav-item">
-          <a class="nav-link login" href="/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link signup" href="/signup">Sign Up</a>
-        </li>
-{{/if}}
-      </ul>
-    </div>
-  </div>
-</nav>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/dashboard">Dashboard</a>
+              </li>
+              {{! conditional to login or out }}
+              {{#if loggedIn}}
+                <li class="nav-item">
+                  <a id="logout" class="nav-link logout" href="#">Logout</a>
+                </li>
+              {{else}}
+                <li class="nav-item">
+                  <a class="nav-link login" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link signup" href="/signup">Sign Up</a>
+                </li>
+              {{/if}}
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <div>
-<h1 class="text-center">Musical Code</h1>
+      <h1 class="text-center">Musical Code</h1>
     </div>
+    {{!-- Other handlebars will be directed here. --}}
     <main>
-{{{body}}}
+      {{{body}}}
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    
+    {{!-- bootsrap script --}}
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+
     {{#if loggedIn}}
-    <script src="/js/logout.js"></script>
-    
-    
+    {{!-- if user is logged in, this script will be linked --}}
+      <script src="/js/logout.js"></script>
+{{!-- else, the signup and login scripts will be linked. --}}
     {{else}}
-    <script src="/js/signup.js"></script>
-    <script src="/js/login.js"></script>
+      <script src="/js/signup.js"></script>
+      <script src="/js/login.js"></script>
     {{/if}}
   </body>
 </html>
