--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,29 @@
+* {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+}
+
+main {
+  background-image: url("https://img.freepik.com/free-photo/white-paper-texture_1194-5998.jpg?w=2000");
+}
+
+.bg {
+  background: fixed;
+}
+
+a {
+  text-decoration: none;
+  color:black;
+}
+
+h1 {
+  font-size: 6rem;
+}
+
+h2, h3 {
+  font-weight: bold;
+}
+
 img {
   max-width: 600px;
   border: solid black 2px;
@@ -17,3 +43,4 @@ textarea {
   text-overflow: ellipsis;
   max-width: 200px;
 }
+
