--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,21 @@
+    <div class="container text-center mb-4">
+      <h1 class="main-title">Musical Code</h1>
+      <h2 class="subtitle">A blog about music and code!</h2>
+    </div>
 {{#each blogs as |blog|}}
-  <div class="blog-post container">
+  <div class="blog-post container text-center">
     <div class="post">
       <div class="img img-fluid">
         <img src={{blog.img}} alt="Decorative Image" />
       </div>
-      <h2 class="title">{{blog.title}}</h2>
+      <div class="container text-center">
+<h2 class="title">{{blog.title}}</h2>
       <h3 class="subtitle"><a
           href="/blog/{{blog.id}}"
         >{{blog.subtitle}}</a></h3>
       <p class="date-created">{{format_date blog.date}}</p>
-      <p class="content short-content">{{blog.content}}</p>
+      <p class="content short-content mx-auto">{{blog.content}}</p>
+      </div>
     </div>
   </div>
 {{/each}}
