--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,7 @@
+{{> loginImage}}
+<div class="container">
 <div class="row">
-<div class="form-container col-4 mx-auto">
+<div class="form-container col-lg-4 col-md-6 col-sm-8 col-xs-12 mx-auto">
 <form class="form signup-form">
   <div class="mb-3">
     <div class="mb-3">
@@ -15,6 +17,7 @@
   </div>
   <button type="submit" class="btn btn-primary">Sign up</button>
 </form>
+</div>
 </div>
 </div>
 {{!-- Users can use this view to signup with a username, email, and password. --}}
