--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,7 @@
+{{> loginImage}}
+<div class="container">
 <div class="row">
-<div class="form-container col-4 mx-auto">
+<div class="form-container col-lg-4 col-md-6 col-sm-8 col-xs-12 mx-auto">
 <form class="form login-form">
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -12,6 +14,7 @@
   </div>
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
+</div>
 </div>
 </div>
 <script src="/js/login.js"></script>
