add img-fluid to homepage images, add inline 60vw to images

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,8 +5,8 @@
 {{#each blogs as |blog|}}
   <div class="blog-post container text-center">
     <div class="post">
-      <div class="img img-fluid">
-        <img src={{blog.img}} alt="Decorative Image" />
+      <div class="img">
+        <img style="max-width:60vw;" class="img-fluid" src={{blog.img}} alt="Decorative Image" />
       </div>
       <div class="container text-center">
 <h2 class="title">{{blog.title}}</h2>
